--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -17,9 +17,8 @@
     {% if post.image  %}
         <img class="image" src="{{ post.image.url}}"/>
     {% endif %}
-
+    <p>{{ post.video|linebreaksbr }}</p>
     {% video post.video as youtube %}
-    <iframe width="640" height="360" src="{{ youtube.url }}&autoplay=1&mute=1" allow="autoplay" frameborder="0"></iframe>
+    <iframe width="640" height="360" src="{{ youtube.url }}&autoplay=1&mute=1&playsinlien=1" allow="autoplay" frameborder="0"></iframe>
     {% endvideo %}
-
 {% endblock %}
