--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -17,8 +17,61 @@
     {% if post.image  %}
         <img class="image" src="{{ post.image.url}}"/>
     {% endif %}
-    <p>{{ post.video|linebreaksbr }}</p>
-    {% video post.video as youtube %}
-    <iframe width="640" height="360" src="{{ youtube.url }}&autoplay=1&mute=1&playsinlien=1" allow="autoplay" frameborder="0"></iframe>
-    {% endvideo %}
+    {# url 확인 코드 #}
+
+{#        {% video post.video as youtube %}#}
+{#        <iframe width="640" height="360" src="{{ youtube.url }}&autoplay=1&mute=1" frameborder="0"></iframe>#}
+{#        {% endvideo %}#}
+
+
+    <div id="player"></div><!-- 실제로 영상이 나올 부분 -->
+
+<!-- 아래 코드가 실행되면 player div 위에 iframe 이 덮입혀짐 -->
+
+
+
+<script src="http://www.youtube.com/iframe_api"></script><!-- 아래 원문에서 복잡하게 기술되었던 부분 -->
+
+<script>
+
+  var player;
+
+  function onYouTubeIframeAPIReady(){
+
+    player = new YT.Player('player',{
+
+      width:'100%',
+
+      videoId:videoid,
+
+      playerVars:{'autoplay':1,'playsinline':1},
+
+      events:{ 'onReady':onPlayerReady }
+
+    });
+
+  }
+
+  function onPlayerReady(e){
+
+    e.target.mute();
+
+    e.target.playVideo();
+
+  }
+
+
+</script>
+    {# youtube url from id #}
+
+    <script>
+    url = "{{ post.video }}";
+    videoid=youtube_parser(url);
+
+function youtube_parser(url){
+    var regExp = /^.*((youtu.be\/)|(v\/)|(\/u\/\w\/)|(embed\/)|(watch\?))\??v?=?([^#&?]*).*/;
+    var match = url.match(regExp);
+    return (match&&match[7].length==11)? match[7] : false;
+}
+</script>
 {% endblock %}
